--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,8 @@ dependencies:
     - pyyaml
     - pandas
     - seaborn
+    - imageio
+    - imgaug
     - pip
     - pip:
         - opencv-contrib-python==4.1.2.30
