feat: test with yolo

--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,17 @@ base-dataset/
 
 tests/
 
+logs/
+
 notebooks/dataset-generation/dtd/
 notebooks/dataset-generation/data/cards
 notebooks/dataset-generation/data/scenes
 notebooks/dataset-generation/data/backgrounds.pck
 notebooks/dataset-generation/data/cards.pck
 notebooks/dataset-generation/test/2c/
+
+notebooks/yolo/darknet/
+notebooks/yolo/darknet53.conv.74
+
 
 output.txt
